--- a/gui/style/main.css
+++ b/gui/style/main.css
@@ -42,7 +42,7 @@ body::-webkit-scrollbar {
 
 #media_controls {
     height: 100%;
-    width: 60%;
+    width: 50%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -58,7 +58,7 @@ body::-webkit-scrollbar {
 }
 
 #song_media {
-    width: 20%;
+    width: 25%;
     height: 100%;
     color: white;
     display: flex;
@@ -67,7 +67,7 @@ body::-webkit-scrollbar {
 }
 
 #volume_controls {
-    width: 20%;
+    width: 25%;
     height: 100%;
     display: flex;
     align-items: center;
@@ -204,6 +204,7 @@ body::-webkit-scrollbar {
 
 #song_artist{
     font-size: 11px;
+    cursor: pointer;
 
 }
 
@@ -273,19 +274,14 @@ body::-webkit-scrollbar {
 }
 #main {
     width: 100%;
-    height: 100vh;
-    position: relative;
     display: flex;
-    flex-direction: row;
 }
 
 #sidebar {
     width: 250px;
-    background: black;
     position: fixed;
-    height: 100%;
-    padding-top: 20px;
-
+    height: 100vh;
+    padding-top: 12px;
 }
 
 #sidebar > hr {
@@ -296,8 +292,9 @@ body::-webkit-scrollbar {
 }
 
 #content {
-    width: 100%;
-    margin-left: 250px;
+    position: absolute;
+    left: 250px;
+    width: calc(100%-250px);
 }
 
 #logo_side {
@@ -318,6 +315,11 @@ body::-webkit-scrollbar {
     justify-content: center;
     align-items: center;
     height: 72px;
+}
+
+#artist_page_bg_img_container_2 {
+    width: 100%;
+
 }
 
 .sidebar_container {
@@ -391,6 +393,7 @@ body::-webkit-scrollbar {
     padding-left: 8px;
     color: #202020;
     z-index: 1;
+    -webkit-app-region: no-drag;
 }
 
 #artist_page {
@@ -398,7 +401,6 @@ body::-webkit-scrollbar {
     color: white;
     width: 100%;
     display: none;
-    margin-top: 100px;
 }
 
 #artist_page_heading{
@@ -408,7 +410,7 @@ body::-webkit-scrollbar {
     margin-left: 0;
     opacity: 0.5;
     line-height: 56px;
-    margin-top: 9px;
+    margin-top: 5px;
 
 }
 
@@ -422,15 +424,17 @@ body::-webkit-scrollbar {
 
 #artist_page_bg_img {
     width: 100%;
-    z-index: -2;
-    position: absolute;
-    top: 0;
+    height: 400px;
+    display: grid;
+    overflow: hidden;
+    background-size: cover;
+    background-position: center;
 
 }
 
 #artist_page_bg_img_container {
     width: 100%;
-    height: 300px;
+    height: 400px;
     overflow: hidden;
 
 }
@@ -439,6 +443,7 @@ body::-webkit-scrollbar {
     position: absolute;
     top: 275px;
     margin-left: 30px;
+    z-index: 3;
 }
 
 #artist_page_overlay_main {
@@ -448,12 +453,13 @@ body::-webkit-scrollbar {
     background: black;
     opacity: 0.5;
     top: 0;
+    z-index: 1;
 
 }
 
 #heading_container {
     width: 100%;
-    height: 300px;
+    height: 400px;
     overflow: hidden;
 
 
@@ -466,6 +472,7 @@ body::-webkit-scrollbar {
     top: 323px;
     background: rgb(32,32,32);
     background: linear-gradient(180deg, rgba(32,32,32,0) 0%, rgba(32,32,32,1) 80%);
+    z-index: 2;
 }
 
 #artist_page_button_area {
@@ -473,6 +480,7 @@ body::-webkit-scrollbar {
     display: flex;
     flex-direction: row;
     top: 370px;
+    z-index: 3;
 }
 
 .artist_page_button_area_play {
@@ -487,6 +495,8 @@ body::-webkit-scrollbar {
     border: none;
     cursor: pointer;
 }
+
+
 
 .artist_page_button_area_follow {
     margin-left: 35px;
@@ -506,6 +516,7 @@ body::-webkit-scrollbar {
     margin-left: 35px;
     width: auto;
     position: absolute;
+    z-index: 2;
 }
 
 #artist_page_menu {
@@ -754,7 +765,7 @@ body::-webkit-scrollbar {
 
 }
 
-#search_list {
+.search_list {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -834,13 +845,12 @@ body::-webkit-scrollbar {
 }
 
 #search_container {
-    height: 72px;
-    padding-top: 20px;
+    height: 100px;
     display: flex;
     flex-direction: row;
     align-items: center;
     position: fixed;
-    z-index: 1;
+    z-index: 4;
     width: 100%;
     -webkit-app-region: drag;
     margin-top: 0;
@@ -851,12 +861,23 @@ body::-webkit-scrollbar {
 #search_container_bg{
     position: absolute;
     width: 100%;
-    height: 95px;
-    margin-top: -23px;
+    height: 86px;
     background: #202020;
-    padding-bottom: 40px;
     z-index: -1;
     opacity: 0;
+    margin-top: -10px;
+    animation-duration: 600ms;
+    animation-fill-mode: forwards;
+}
+
+@keyframes searchbar_bg_out {
+    0% {margin-top: -30px; opacity: 0;}
+    100% {margin-top: -10px; opacity: 1;}
+}
+
+@keyframes searchbar_bg_in {
+    0% {margin-top: -10px; opacity: 1;}
+    100% {margin-top: -30px; opacity: 0;}
 }
 
 
@@ -891,17 +912,37 @@ body::-webkit-scrollbar {
     margin: 0;
     opacity: 0;
     padding-top: -15px;
+    animation-duration: 300ms;
+    animation-fill-mode: forwards;
+    backface-visibility: hidden;
 }
 
 #button_scroll1 {
     opacity: 0;
-    padding-top: -15px;
+    animation-duration: 400ms;
+    animation-fill-mode: forwards;
+    backface-visibility: hidden;
+
 }
 
 #button_scroll2 {
     opacity: 0;
-    padding-top: -15px;
+    animation-duration: 500ms;
+    animation-fill-mode: forwards;
+    backface-visibility: hidden;
+
 }
+
+@keyframes searchbar_items_out {
+    0% {margin-top: -30px; opacity: 0;}
+    100% {margin-top: 0px; opacity: 1;}
+}
+
+@keyframes searchbar_items_in {
+    0% {margin-top: 0px; opacity: 1;}
+    100% {margin-top: -30px; opacity: 0;}
+}
+
 
 .artist_overview_tile {
     width: 100%;
@@ -957,3 +998,4 @@ body::-webkit-scrollbar {
     opacity: 1;
 
 }
+
